# now

./: README.md  pyproject.toml
now/: __init__.py  now.py  time_format.py
tests/: test_main.py  test_now.py  test_time_format.py
